hopefully fixed spacing by changing ul to ol

--- a/public_html/proposalStyling.css
+++ b/public_html/proposalStyling.css
@@ -9,7 +9,7 @@ body
     background-color: beige;
 }
 
-ul {
+ol {
   line-height: 45px;
 }
 
